[package]
name = "queue_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Actor framework
actix = "0.13"
actix-rt = "2.9"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# In-memory concurrency-safe map
dashmap = "5.5"

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

# UUID for message IDs
uuid = { version = "1", features = ["v4", "serde"] }
